k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpustat
  labels:
    app.kubernetes.io/part-of: gpustat
