k3s/alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: notification
    app.kubernetes.io/part-of: gpustat
spec:
  selector:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: notification
  ports:
  - port: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: notification
    app.kubernetes.io/part-of: gpustat
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gpustat
      app.kubernetes.io/component: notification
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gpustat
        app.kubernetes.io/component: notification
        app.kubernetes.io/part-of: gpustat
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:v0.33.0
        args:
        - --config.file=/etc/alertmanager/alertmanager.yml
        ports:
        - containerPort: 9093
        volumeMounts:
        - name: config-rendered
          mountPath: /etc/alertmanager
        - name: data
          mountPath: /alertmanager
      volumes:
      - name: config-tmpl
        configMap:
          name: alertmanager-config
      - name: templates
        configMap:
          name: alertmanager-templates
      - name: config-rendered
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: alertmanager-data
