k3s/gpustat-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpustat-web
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: gpustat
spec:
  selector:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: frontend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpustat-web
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: gpustat
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gpustat
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gpustat
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: gpustat
    spec:
      containers:
        - name: gpustat-web
          image: gpustat-web:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
