k3s/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: visualization
    app.kubernetes.io/part-of: gpustat
spec:
  selector:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: visualization
  ports:
  - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: visualization
    app.kubernetes.io/part-of: gpustat
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gpustat
      app.kubernetes.io/component: visualization
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gpustat
        app.kubernetes.io/component: visualization
        app.kubernetes.io/part-of: gpustat
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:13.1-slim
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: dashboard-provider
          mountPath: /etc/grafana/provisioning/dashboards
        - name: dashboard-gpustat
          mountPath: /var/lib/grafana/dashboards
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: datasources
          configMap:
            name: grafana-datasources
        - name: dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: dashboard-gpustat
          configMap:
            name: grafana-dashboard-gpustat
