k3s/vmalert.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmalert
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: alerting
    app.kubernetes.io/part-of: gpustat
spec:
  selector:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: alerting
  ports:
  - port: 8880
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmalert
  namespace: gpustat
  labels:
    app.kubernetes.io/name: gpustat
    app.kubernetes.io/component: alerting
    app.kubernetes.io/part-of: gpustat
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gpustat
      app.kubernetes.io/component: alerting
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gpustat
        app.kubernetes.io/component: alerting
        app.kubernetes.io/part-of: gpustat
    spec:
      containers:
        - name: vmalert
          image: victoriametrics/vmalert:v1.146.0-scratch
          args:
            - --rule=/etc/vmalert/*.rules
            - --datasource.url=http://victoriametrics:8428
            - --notifier.url=http://alertmanager:9093
            - --remoteWrite.url=http://victoriametrics:8428
          ports:
            - containerPort: 8880
          volumeMounts:
            - name: rules
              mountPath: /etc/vmalert
      volumes:
        - name: rules
          configMap:
            name: vmalert-rules
